RL background and bibliography

--- a/contents/ch1.tex
+++ b/contents/ch1.tex
@@ -38,5 +38,5 @@ The ability to perform multiple tasks within a single environment is another maj
 \subsection{Natural Language Grounding}
 Another application enabled by this architecture is the grounding of natural language commands into symbolic forms that inform reinforcement learning policies. This thesis demonstrates how natural language prompts can be interpreted by a symbolic module and used to condition the agent’s behavior. This has broad implications in human-robot interaction, where instructing a robot through high-level language—rather than low-level programming—is desirable. Applications could range from domestic robotics to collaborative manufacturing, where non-expert users need to communicate tasks to autonomous systems in an intuitive and interpretable way.
 
-\section{Challenges} \label{se:challenges}
-\section{Contributions} \label{se:contributions}
+\section{Scope}
+\section{Contributions}
