--- a/contents/ch3.tex
+++ b/contents/ch3.tex
@@ -1,4 +1,4 @@
-\chapter{Robotic Manipulator Platform}
+\chapter{Robotic Manipulator Robotic Manipulator Platform}
 Given the problem space, a real-world and cooresponding simulated environment was created as a platform to train and test reinforcement learning algorithms for the neuro-symbolic architecture described in this paper and general reinforcement learning algorithms involving robotic manipulators.
 The physical hardware used for this robotic manipulator is based on an open-source hardware design[CITATION], with modifications made to reduce cost while maintaining performance.
 The cooresponding simulation and control of the manipulator was developed using the ROS2 middleware suite and nd Gazebo simulation enviroment enabling a flexible and reproducable setup for training, validating, and deploying algorithms.
